# disweb.py

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  docs-bug-report.md  libary-bug-report.md
.github/workflows/: codeql-analysis.yml  python-app.yml  python-package.yml  tests.yml
api/: __init__.py  api.py  exceptions.py  objects.py
docs/: Reference.md  guild.md  index.md  reference.md  user.md
docs/Getting Started/: installation.md
test_package/: test_package.py
