[metadata]
name = disweb.py
version = attr: diswebpy.__version__
url = https://github.com/InvalidLenni/disweb.py
author = InvalidLenni
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT
license_file = LICENSE
description = A simple python wrapper for the disweb api.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
project_urls =
    Documentation = https://invalidlenni.gitbook.io/disweb.py/
    Bug Tracker = https://github.com/InvalidLenni/disweb.py/issues/
    
    
[options]
packages = api
install_requires =
    aiohttp>=3.6.0,<3.8.0
    setuptools>=60.4.0
    
python_requires = >=3.8
